--- a/UK_analysis.ipynb
+++ b/UK_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e57acbca",
+   "id": "8aa25bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d8b370e",
+   "id": "fe31e508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4805f8fa",
+   "id": "99c2cb2a",
    "metadata": {},
    "source": [
     "<h1>Analysis of Covid situation in UK</h1>"
@@ -36,10 +36,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ebbb6f1",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "51fa75e8",
+   "metadata": {},
    "outputs": [],
    "source": [
     "#selecting data only relevant to UK\n",
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae6696f",
+   "id": "4c3b2126",
    "metadata": {},
    "source": [
     "<h3>Daily new Covid cases in UK</h3>"
@@ -59,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e72913",
+   "id": "c5df87ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2a60413",
+   "id": "50945e2a",
    "metadata": {},
    "source": [
     "<h3>Daily Deaths in UK</h3>"
@@ -86,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99432aa",
+   "id": "3892ae29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9409e79",
+   "id": "f13ec10f",
    "metadata": {},
    "source": [
     "<h3>Daily new cases vs daily deaths in UK</h3>"
@@ -111,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90bedf67",
+   "id": "f147c4a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5171eb7a",
+   "id": "2a978925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10c4e620",
+   "id": "62dac6d1",
    "metadata": {},
    "source": [
     "R-squared value reall low indicating not strong correlation between Daily New Cases and Daily Deaths in UK"
@@ -153,152 +151,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaa55f9d",
+   "id": "104afe4d",
    "metadata": {},
    "source": [
-    "<h1>Analysis of Covid situation in Kenya</h1>"
+    "<h2> Looking into number of cases vs vaccination rate</h2>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "659df609",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#selecting data relevant to Kenya from the main data frame\n",
-    "kenya_covid=covid_data[covid_data[\"country\"]==\"Kenya\"]\n",
-    "kenya_covid.to_csv(\"output/Kenya_covid_data.csv\", index=False, header=True)\n",
-    "kenya_covid.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db97a388",
-   "metadata": {},
-   "source": [
-    "<h3>Daily Covid Cases in Kenya</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba741366",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# selecting every 30th row to show data for each month\n",
-    "kenya_covid2 = kenya_covid[kenya_covid.index % 30== 0]\n",
-    "date2=kenya_covid2[\"date\"]\n",
-    "daily_new_cases_kenya=kenya_covid2[\"daily_new_cases\"]\n",
-    "#plotting line graph showing daily new cases\n",
-    "plt.plot(date2, daily_new_cases_kenya)\n",
-    "plt.title(\"Daily New Covid Cases in Kenya from March 2020 to November 2021\")\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.savefig(\"images/kenya_daily_cases.png\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae5551ed",
-   "metadata": {},
-   "source": [
-    "<h3>Daily Deaths in Kenya</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c5a0633",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#plotting line graph of daily deaths in UK\n",
-    "daily_new_deaths_kenya=kenya_covid2[\"daily_new_deaths\"]\n",
-    "date2=kenya_covid2[\"date\"]\n",
-    "plt.plot(date2, daily_new_deaths_kenya)\n",
-    "plt.title(\"Daily New Deaths in Kenya from March 2020 to November 2021\")\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.savefig(\"images/kenya_daily_deaths.png\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3aab2de6",
-   "metadata": {},
-   "source": [
-    "<h3>Daily Cases vs Deaths in Kenya</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3df1e5ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dropping all nan values\n",
-    "daily_new_cases_kenya=daily_new_cases_kenya.dropna()\n",
-    "daily_new_deaths_kenya=daily_new_deaths_kenya.dropna()\n",
-    "#scatter plot of daily cases vs daily deaths\n",
-    "plt.scatter(daily_new_cases_kenya,daily_new_deaths_kenya, marker=\"o\", facecolors=\"blue\", alpha=0.75)\n",
-    "plt.xlabel(\"Daily New Cases\")\n",
-    "plt.ylabel(\"Daily New Deaths\")\n",
-    "plt.title(\"Kenya Daily New Cases vs Deaths\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bc62836",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#adding linear regression to the scatter plot\n",
-    "(slope, intercept, rvalue, pvalue, stderr) = linregress(daily_new_cases_kenya, daily_new_deaths_kenya)\n",
-    "regress_values=daily_new_cases_kenya*slope+intercept\n",
-    "line_eq= \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
-    "plt.xlabel(\"Daily New cases\")\n",
-    "plt.ylabel(\"Daily new deaths\")\n",
-    "print(f\"The r-squared is: {rvalue**2}\")\n",
-    "plt.title(\"Kenya Daily New Cases vs Deaths\")\n",
-    "plt.scatter(daily_new_cases_kenya,daily_new_deaths_kenya, marker=\"o\", facecolors=\"blue\", alpha=0.75)\n",
-    "plt.plot(daily_new_cases_kenya,regress_values,\"r-\")\n",
-    "plt.annotate(line_eq,(600,2.5),fontsize=15, color=\"red\")\n",
-    "plt.savefig(\"images/kenya_daily_cases_vs_deaths.png\")\n",
-    "plt.show"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4770011",
-   "metadata": {},
-   "source": [
-    "The r-squared value is relatively low suggesting now strong correlation between variables."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "49863b16",
-   "metadata": {},
-   "source": [
-    "<h2> Looking into number of cases vs vaccination rate in Kenya and UK</h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc2de85a",
-   "metadata": {},
-   "source": [
-    "<h3> Kenya vaccination analysis</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a64884f6",
+   "id": "714dd5cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,96 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d8a6039",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#selecting data only relevant to Kenya\n",
-    "kenya_vaccine=vaccine_data[vaccine_data[\"country\"]==\"Kenya\"]\n",
-    "kenya_vaccine.to_csv(\"output/Kenya_vaccination_data.csv\", index=False, header=True)\n",
-    "kenya_covid=covid_data[covid_data[\"country\"]==\"Kenya\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "804dc581",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#merging two datasets for Kenya to display full dataframe of vaccination and covid cases\n",
-    "kenya_merged=pd.merge(kenya_vaccine,kenya_covid, on=\"date\")\n",
-    "kenya_merged=kenya_merged.dropna()\n",
-    "kenya_merged.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4189b9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#scatter plot of daily cases vs daily vaccination in Kenya\n",
-    "kenya_merged_vacc=kenya_merged[\"daily_vaccinations\"]\n",
-    "kenya_merged_cases=kenya_merged[\"daily_new_cases\"]\n",
-    "plt.scatter(kenya_merged_cases,kenya_merged_vacc, marker=\"o\", facecolors=\"blue\", alpha=0.75)\n",
-    "plt.xlabel(\"Daily New Cases\")\n",
-    "plt.ylabel(\"Daily Vaccinations\")\n",
-    "plt.title(\"Daily new cases vs daily vaccination in Kenya\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9eaea2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#adding linear regression to the scatter plot\n",
-    "(slope, intercept, rvalue, pvalue, stderr) = linregress(kenya_merged_vacc,kenya_merged_cases)\n",
-    "regress_values=kenya_merged_vacc*slope+intercept\n",
-    "line_eq= \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
-    "print(f\"The r-squared is: {rvalue**2}\")\n",
-    "plt.scatter(kenya_merged_vacc,kenya_merged_cases, marker=\"o\", facecolors=\"blue\", alpha=0.75)\n",
-    "plt.plot(kenya_merged_vacc,regress_values,\"r-\")\n",
-    "plt.annotate(line_eq,(5000,200),fontsize=15, color=\"red\")\n",
-    "plt.xlabel(\"Daily Vaccinations\")\n",
-    "plt.ylabel(\"Daily New Cases\")\n",
-    "plt.title(\"Daily new vaccination vs daily cases in Kenya\")\n",
-    "plt.savefig(\"images/kenya_daily_cases_vs_vaccination.png\")\n",
-    "plt.show"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed6fbd69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#creating scatter plot of vaccination over time\n",
-    "kenya_time=kenya_merged[\"date\"]\n",
-    "daily_vacc=kenya_merged[\"daily_vaccinations\"]\n",
-    "plt.scatter(kenya_time, daily_vacc, marker=\"o\", facecolors=\"red\", edgecolors=\"black\",alpha=0.75)\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.ylabel(\"Vaccination\")\n",
-    "plt.title(\"Vaccination over time in Kenya\")\n",
-    "plt.savefig(\"images/kenya_vaccination_over_time.png\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "074a13b1",
-   "metadata": {},
-   "source": [
-    "<h3> UK vaccination analysis</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "738a82b8",
+   "id": "b1f9f66f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b39b83db",
+   "id": "4f3a1e0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76b6db02",
+   "id": "423f1b67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f77feb1c",
+   "id": "818154c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb10115",
+   "id": "7f0c1768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df8e78ee",
+   "id": "46c3ce4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "641639ac",
+   "id": "3889f240",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e47f78ad",
+   "id": "09cda30d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7762adef",
+   "id": "1fcb994b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5167ec22",
+   "id": "75b4cf95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cffe6b1",
+   "id": "98cc0140",
    "metadata": {},
    "outputs": [],
    "source": [
