--- a/Global Analysis.ipynb
+++ b/Global Analysis.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "x = covid_metadata_df['country']\n",
     "y = covid_metadata_df['cumulative_total_cases']\n",
-    "plt.title('Figure 1. Global Overview')\n",
+    "plt.title('Global Overview')\n",
     "plt.xlabel('Country name')\n",
     "plt.ylabel('Total cases')\n",
     "\n",
@@ -91,7 +91,7 @@
     "y_values_1 = covid_metadata_cumulative_df[\"cumulative_total_deaths\"]\n",
     "\n",
     "plt.scatter(x_values_1,y_values_1,marker = \"*\", color=\"orange\")\n",
-    "plt.title('Figure 2. Correlations between total cases and total death')\n",
+    "plt.title('Correlations between total cases and total death')\n",
     "plt.xlabel('total_cases')\n",
     "plt.ylabel('total_deaths')\n",
     "plt.minorticks_on()\n",
@@ -99,7 +99,7 @@
     "plt.grid(which='minor', linestyle=':')\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig(\"images/Correlations_1.png\")\n",
+    "plt.savefig(\"images/Correlations.png\")\n",
     "plt.show()"
    ]
   },
@@ -114,7 +114,7 @@
     "y_values_2 = covid_metadata_df[\"daily_new_deaths\"]\n",
     "\n",
     "plt.scatter(x_values_2,y_values_2,marker = \"+\", color=\"blue\")\n",
-    "plt.title('Figure 7. Correlations between daily cases and daily death')\n",
+    "plt.title('Correlations between daily cases and daily death')\n",
     "plt.xlabel('daily_cases shifting 30 day')\n",
     "plt.ylabel('daily_deaths')\n",
     "plt.minorticks_on()\n",
@@ -148,7 +148,7 @@
     "\n",
     "\n",
     "plt.scatter(x_values_2[7:],y_values_2[7:])\n",
-    "plt.title('Figure 8.The linear regression between daily case in 7 days and daily death')\n",
+    "plt.title('The linear regression between daily case in 7 days and daily death')\n",
     "plt.plot(x_values_2[7:],regress_values,\"r-\")\n",
     "plt.annotate(line_eq,(10,20),fontsize=12,color=\"red\")\n",
     "plt.xlabel('daily case shift in 7 days')\n",
@@ -180,7 +180,7 @@
     "correlation = st.pearsonr(x_values_3[14:], y_values_3[14:])\n",
     "\n",
     "plt.scatter(x_values_3[14:],y_values_3[14:])\n",
-    "plt.title('Figure 9.The linear regression between daily case in 30 days and daily death')\n",
+    "plt.title('The linear regression between daily case in 30 days and daily death')\n",
     "plt.plot(x_values_3[14:],regress_values,\"r-\")\n",
     "plt.annotate(line_eq,(10,20),fontsize=12,color=\"red\")\n",
     "plt.xlabel('daily case shift in 14 days')\n",
@@ -377,6 +377,7 @@
    "outputs": [],
    "source": [
     "# ANOVA test 1\n",
+    "import scipy.stats as stats\n",
     "population1 = covid_metadata_df[covid_metadata_df[\"country\"] == 'USA'].fillna(0)\n",
     "population2 = covid_metadata_df[covid_metadata_df[\"country\"] == 'China'].fillna(0) \n",
     "population3 = covid_metadata_df[covid_metadata_df[\"country\"] == 'UK'].fillna(0)\n",
@@ -394,7 +395,7 @@
     "\n",
     "# Perform the ANOVA\n",
     "stats.f_oneway(group1, group2, group3, group4)\n",
-    "plt.title('Figure 10.ANOVA test for daily_new_cases')\n",
+    "plt.title('ANOVA test for daily_new_cases')\n",
     "plt.savefig(\"images/ANOVA1.png\")"
    ]
   },
@@ -423,7 +424,7 @@
     "\n",
     "# Perform the ANOVA\n",
     "stats.f_oneway(group1, group2, group3, group4)\n",
-    "plt.title('Figure 11.ANOVA test for daily_new_deaths')\n",
+    "plt.title('ANOVA test for daily_new_deaths')\n",
     "plt.savefig(\"images/ANOVA2.png\")"
    ]
   }
